--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <p>UserName: <strong data-bind="text: firstName"></strong></p>
     <p>Last name: <strong data-bind="text: lastName"></strong></p>
     <p>Username:
-      <input data-bind="value: firstName" />
+      <input data-bind="value: firstName">
     </p>
     <p>Password:
-      <input data-bind="value: lastName" />
+      <input data-bind="value: lastName">
     </p>
     <footer></footer>
   </div>
