added computed function

--- a/index.html
+++ b/index.html
@@ -13,14 +13,15 @@
 <body>
   <div id="wrapper">
     <header></header>
-    <p>UserName: <strong data-bind="text: firstName"></strong></p>
-    <p>Last name: <strong data-bind="text: lastName"></strong></p>
-    <p>Username:
+    <p>First Name: <strong data-bind="text: firstName"></strong></p>
+    <p>Last Name: <strong data-bind="text: lastName"></strong></p>
+    <p>First Name:
       <input data-bind="value: firstName">
     </p>
-    <p>Password:
+    <p>Last Name:
       <input data-bind="value: lastName">
     </p>
+    <p>Full Name: <strong data-bind="text: fullName"></strong></p>
     <footer></footer>
   </div>
   <script type="text/javascript" src="lib/node_modules/jquery/dist/jquery.min.js"></script>
